--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit tests / coverage reports
 htmlcov/
 .tox/
 .nox/
@@ -152,7 +152,7 @@ cmake-build-*/
 
 # Installer logs
 
-# Unit test / coverage reports
+# Unit tests / coverage reports
 
 # Translations
 
